--- a/.github/workflows/build-and-push.yml
+++ b/.github/workflows/build-and-push.yml
@@ -16,14 +16,14 @@ jobs:
       - name: Login to Docker Hub
         uses: docker/login-action@v1
         with:
-          username: ${{ secrets.USERNAME }}
-          password: ${{ secrets.PASSWORD }}
+          username: ${{ secrets.DOCKER_USERNAME }}
+          password: ${{ secrets.DOCKER_PASSWORD }}
 
       - name: Build Docker Image
         run: docker build -t openbalena-admin_remote_1 .
 
       - name: Tag Docker Image
-        run: docker tag openbalena-admin_remote_1 giuseppe442/open-balena-remote:latest
+        run: docker tag openbalena-admin_remote_1 dcnext/open-balena-remote:latest
 
       - name: Push Docker Image
-        run: docker push giuseppe442/open-balena-remote:latest
+        run: docker push dcnext/open-balena-remote:latest
